--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Osama Turbo Burner Core
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 * * * *"  # هذا السطر يجعلها تعمل تلقائياً في بداية كل ساعة ⏰
+
 jobs:
   run_core:
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests pyairtable
-      - name: 🚀 إطلاق المهمة
+      - name: 🚀 إطلاق مهمة الملك التلقائية
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
         run: python main.py
